text fields filters
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7655 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/style.css
@@ -269,9 +269,13 @@ BrowseButton
 	cornerRadius				: 7;
 	fontSize					: 14;
 	backgroundGradientColors	: #e0e0e0, #ffffff;
+	
 	borderThickness				: 1.5;
 	borderColor					: #414141;
 	borderSkin : ClassReference("net.vdombox.powerpack.customize.skins.InputAnswerTextBackgroundSkin");
+	
+	paddingLeft	: 7;
+	paddingTop	: 7;
 }
 
 
