git-svn-id: http://svn.vdombox.ru/flextools/trunk@7660 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -629,6 +629,11 @@
 				getPageRequest();
 			}
 			
+			protected function dataTable_doubleClickHandler(event:MouseEvent):void
+			{
+				addRowBtnClickHandler();
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -648,7 +653,8 @@
 			<components1:VDOMAdvancedDataGrid id="dataTable" dataProvider="{dataGridProvider}"
 											  width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"				 
 											  draggableColumns="true" sortableColumns="true" doubleClickEnabled="true"
-											  allowMultipleSelection="true" alpha.Result="1" alpha.Progress="0.4"/>
+											  allowMultipleSelection="true" alpha.Result="1" alpha.Progress="0.4"
+											  doubleClick="dataTable_doubleClickHandler(event)"/>
 			
 			<mx:Image source="@Embed('assets/spinner.swf')" width="100%" height="100%" verticalAlign="middle" horizontalAlign="center"  includeIn="Progress" scaleContent="false" maintainAspectRatio="true"/>
 			
