--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -117,17 +117,17 @@
 	<s:VGroup paddingTop="5" width="100%" height="100%" gap="5">
 		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="left" paddingLeft="10" paddingRight="10" >
 			
-			<components1:WorkAreaButton id="data" label="{ resourceManager.getString( 'DataBase_General', 'data_table_data' ) }" height="20" click="data_clickHandler(event)" includeIn="tableEditor,tableStructure"/>
+			<components1:WorkAreaButton id="data" label="{ resourceManager.getString( 'DataBase_General', 'data_table_data' ) }" height="20" click="data_clickHandler(event)" highlighted="false" highlighted.tableEditor="true" includeIn="tableEditor,tableStructure"/>
 			
-			<components1:WorkAreaButton id="structure" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure' ) }" height="20" click="structure_clickHandler(event)" includeIn="tableEditor,tableStructure"/>
+			<components1:WorkAreaButton id="structure" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure' ) }" height="20" click="structure_clickHandler(event)" highlighted="false" highlighted.tableStructure="true" includeIn="tableEditor,tableStructure"/>
 			
-			<components1:WorkAreaButton id="visual" label="{ resourceManager.getString( 'DataBase_General', 'data_table_visual' ) }" height="20" click="visual_clickHandler(event)" includeIn="baseQuery,baseVisual"/>
+			<components1:WorkAreaButton id="visual" label="{ resourceManager.getString( 'DataBase_General', 'data_table_visual' ) }" height="20" click="visual_clickHandler(event)" highlighted="false" highlighted.baseVisual="true" includeIn="baseQuery,baseVisual"/>
 			
-			<components1:WorkAreaButton id="query" label="{ resourceManager.getString( 'DataBase_General', 'data_table_sql_query' ) }" height="20" click="query_clickHandler(event)" includeIn="baseQuery,baseVisual"/>
+			<components1:WorkAreaButton id="query" label="{ resourceManager.getString( 'DataBase_General', 'data_table_sql_query' ) }" height="20" click="query_clickHandler(event)" highlighted="false" highlighted.baseQuery="true" includeIn="baseQuery,baseVisual"/>
 			
 			<mx:Spacer width="100%"/>
 			
-			<components1:WorkAreaButton id="newTable" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_table' ) }" height="20" click="newTable_clickHandler(event)" includeIn="baseVisual"/>
+			<components1:WorkAreaButton id="newTable" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_table' ) }" icon="@Embed('assets/expand.png')" height="20" click="newTable_clickHandler(event)" includeIn="baseVisual"/>
 			
 			<!--<components1:WorkAreaButton id="newBase" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_base' ) }" height="20" click="newBase_clickHandler(event)" includeIn="baseVisual"/>-->
 			
