add output type
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7661 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
@@ -23,6 +23,9 @@
 
 			[Bindable]
 			private var _nameAttribute : String = "";
+			
+			[Bindable]
+			private var _typeAttribute : String = "";
 
 			[Bindable]
 			private var descriptionAttributeVO : AttributeVO;
@@ -41,8 +44,13 @@
 				if (_treeElementVO)
 				{
 					_nameAttribute = _treeElementVO.pageVO.name;
-				} else 
+					_typeAttribute = _treeElementVO.pageVO.typeVO.displayName;
+				} 
+				else 
+				{
 					_nameAttribute = "";
+					_typeAttribute = "";
+				}
 			}
 			
 			public function set nameAttribute(name:String):void
@@ -237,7 +245,7 @@
 
 			<components:SmoothImage height="18" width="18"/>
 
-			<s:Label id="typeNameLabel"/>
+			<s:Label id="typeNameLabel" text="{_typeAttribute}"/>
 
 		</s:HGroup>
 
