--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/PopupBox.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/PopupBox.mxml
@@ -8,7 +8,7 @@
 			import mx.events.FlexEvent;
 			import mx.graphics.BitmapFill;
 			
-			
+			// TODO : remove this class
 			
 			override protected function updateDisplayList(unscaledWidth:Number,
 														  unscaledHeight:Number):void
